--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,6 @@
 version: 2.0
+orbs:
+  codecov: codecov/codecov@1.0.2
 
 jobs:
   test:
@@ -50,6 +52,8 @@ jobs:
           root: ./
           paths:
             - target/
+      - codecov/upload:
+          file: target/site/jacoco/index.html
 
 workflows:
   version: 2
